htdocs/t/common.css
/* ... */
#top #top-content {position: relative; margin: 0 auto; width: 960px;}
#top h2 { position: absolute; left: -9px; top: 3px; }
#top .nav { position: absolute; left: 190px; top: 0; /*height: 65px;*/ overflow: hidden; background: #000 url(bg/body/index.png) repeat-x 0 0; font-weight: bold; }
#top .nav li{float:left;margin-right:16px;}
#top .nav a { display: block; display: inline-block; height: 37px; font-size: 14px; text-decoration: none; color: #fff; border-bottom: 5px solid #fff; /*line-height: 48px;*/ padding: 23px 18px 0px; }
#top .nav a:hover{border-bottom: 5px solid;}
#cocktails-page #top .nav a.cocktails,
#cocktail-page #top .nav a.cocktails,
#matching-page #top .nav a.cocktails,
#ingredients-page #top .nav a.ingredients,
#bars-page #top .nav a.bars,
#bar-page #top .nav a.bars,
#good-page #top .nav a.goods,
#event-page #top .nav a.events
{ background: url(bg/nav/top.png) repeat-x 0 19px; cursor: default; border-bottom: none !important; }

#top .nav img{}
#top .nav2{display:none;position:absolute;right:0;top:84px;line-height:24px;/*index-page*/}
#top .logo { width: 147px; height: 60px; background-position: -250px 0; display: block; text-indent: 200px; overflow: hidden; }
#index-page #top .logo { cursor: default; }

#bottom{position:relative;z-index:1;font-size:1.1em;line-height:1.7;overflow:hidden;clear:both;padding-top:40px;margin:0 auto;width:960px;}
#bottom .main-menu{float:right;}
#index-page #bottom .main-menu a.main,
#cocktails-page #bottom .main-menu a.cocktails,
#cocktail-page #bottom .main-menu a.cocktails,
#bars-page #bottom .main-menu a.bars,
#bar-page #bottom .main-menu a.bars,
#good-page #bottom .main-menu a.goods,
#event-page #bottom .main-menu a.events
{ color: inherit; cursor: default; text-decoration: none !important; }


.drag-cursor{cursor:url(/t/grabbing.cur),-moz-grabbing;}
.dragging-object{position:absolute;z-index:10;}
#alcohol-harm {margin-top: 15px; width: 960px; height: 40px; background-position: 0 0;}
#branded-image-holder { position: absolute; z-index: 0; right: 0; bottom: 0; width: 100%; overflow: hidden; background-position: 0 0; }
#branded-image-holder .center { width: 1px; height: 1px; margin: 0 auto; position: relative; }
#branded-image { display: block; position: absolute; }

#spotlighted { position: absolute; background-position: 0px -100px; text-decoration: none; }

/* in almost all */
#main-wrapper{margin:0 auto;width:960px;}
.column{border:0 solid #c0c0c0;border-width:0 1px;background:#fff;float:left;width:100%;}
.column-main{width:628px;}

.column-main-container{position:relative;z-index:1;width:630px;float:left;}
.body-wrapper{position:relative;z-index:1;border:0 solid #fff;border-width:0 1px;background:#fff url(bg/body/body-wrapper.png) repeat-x 0 0;padding:14px 18px;}
.b-title{background:url(bg/body/hr-repeat.png) repeat-x 0 100%;margin-bottom:9px;padding-bottom:11px;position:relative;}

.b-title h1,
.b-title h2{font-size:20px;margin-left:-1px;}
.b-title .hrefs {position:absolute; right:0; bottom:15px; font-size:110%;}



/* in cocktail, bar and event */
.b-more {padding-top:20px;overflow:hidden;width:100%;clear:both;padding-bottom:1px;}
.b-more .b-more-cocktails { width:398px;}
.b-more .column{position:relative;}
.b-more dl{height:163px;font-size:120%;height:11.24em;background:#fff url(bg/body/green-more-title.png) repeat-x 0 -19px;}
.b-more dt{margin:-5px -10px 0;padding:0 1px;height:29px;}
.b-more dt b{padding:0 10px;position:relative;top:-1px;line-height:30px;font-size:13px;font-weight:normal;display:block;height:31px;}
.b-more dd{line-height:1.17;position:relative;}
.b-more-cocktails .viewport{overflow:hidden;position:relative;left:16px;top:2px;height:120px; width:330px;}
.b-more-cocktails .surface{width:20000px;}
.b-more-cocktails .point{height:100px;width:330px;float:left;}
.b-more-cocktails ul{padding-top:5px;}
.b-more-cocktails li{width:8em;text-align:center;float:left;width:110px;}
.b-more-cocktails img{display:block;margin:0 auto 5px;}
.b-more-cocktails .prev,
.b-more-cocktails .next{position:absolute;top:54px;height:14px;width:14px;z-index:2;}
.b-more-cocktails .prev{background-position:-500px 0;left:0px;}
.b-more-cocktails .next{background-position:-525px 0;right:-2px;}
.b-more-cocktails .prev.disabled{background-position:-500px -25px;cursor:default;}
.b-more-cocktails .next.disabled{background-position:-525px -25px;cursor:default;}
.cocktail-list .prev,
.cocktail-list .next{position:absolute;top:54px;height:14px;width:14px;z-index:2;}
.cocktail-list .prev{background-position:-500px 0;left:0px;}
.cocktail-list .next{background-position:-525px 0;right:-2px;}
.cocktail-list .prev.disabled{background-position:-500px -25px;cursor:default;}
.cocktail-list .next.disabled{background-position:-525px -25px;cursor:default;}
.b-more .b-more-rec .point{width:130px; display:block}
.b-more .b-more-rec {width:208px;margin-right:20px;}
.b-more .b-more-rec .viewport{width:130px;left:21px;}
.b-more .b-more-rec li{width:130px;}

.square-list .next,
.square-list .prev { display: block; width: 20px; height: 20px; -moz-user-select: none; -webkit-user-select: none; user-select: none; }
.square-list .prev { background-position: -450px 0; }
.square-list .next { background-position: -475px 0; }
.square-list .prev.disabled,
.square-list .next.disabled { cursor:default; }
.square-list .prev.disabled { background-position: -450px -25px; }
.square-list .next.disabled { background-position: -475px -25px; }

/* yellow inputs */
.win-shop .b-gadget .count input,
.win-shop .content dd input
{border:1px solid;text-align:center;height:15px;font-size:1em;line-height:1;padding:3px 0 0 0;border-color:#d7d7d7 #fff #fff #d7d7d7;background:#f1f7b6;margin:0;width:35px;}

/* popups-related */
.win-shop{display:none;}
.win-shop{position:fixed;z-index:50;top:0;left:0;width:100%;height:100%;}
.opacity,.win-shop .opacity {background:#000;opacity:0.75;position:absolute;left:0;top:0;bottom:0;right:0;z-index:4;}
/* ... */

